--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://Nazar-kulyk.github.io/goit-js-hw-1q.git",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-1q/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
   },
   "repository": {
     "type": "git",
